# MWISagent

./: .env.example  .gitignore  .pre-commit-config.yaml  .semgrepignore  CHANGELOG.md  CONTEXT.md  DEV-NOTES.md  Dockerfile  GEMINI.md  Makefile  README.md  TODO.md  agents-cli-manifest.yaml  deployment_metadata.json  pyproject.toml  requirements.txt  skills-mwis-website  threat_model.md
.agents/: AGENTS.md  CONTEXT.md  hooks.json
.semgrep/: rules.yaml
app/: agent.py  agent_logic.py  agent_nodes.py  agent_state.py  auth_middleware.py  cache.py  clarify_nodes.py  forecast_loader.py  maintenance_logic.py  maintenance_nodes.py
docs/: agent_workflow.md  check_forecast_issued.md  env_setup.md  evaluation.md  extract_forecast_details.md  fetch_specific_forecast.md  forecast_cache_db.md  forecast_source.md  identify_forecast_area.md  makefile_commands.md  playground.md  query_country.md  query_date.md  serve_forecast_to_user.md  validate_tool_call.md
frontend/: __init__.py  server.py
kaggle-writeup/: WRITEUP-CONTEXT.md
mwis-agent/: README.md  agents-cli-manifest.yaml  pyproject.toml  test_func.py
specs/: agent_eval.spec.md  agent_workflow.spec.md  build_hills_db.spec.md  check_forecast_issued.spec.md  fetch_specific_forecast.spec.md  forecast_cache.spec.md  forecast_source.spec.md  frontend.spec.md  frontend_integration.spec.md  inject_Dcodes.spec.md  makefile.spec.md  parse_Dcodes.spec.md  parse_forecast.spec.md  playground_testing.spec.md  pyproject.spec.md  query_countries.spec.md  query_date.spec.md  query_fl.spec.md  query_refHeight.spec.md  query_region_spec.md  (+4 more)
(+198 files in other folders)
