[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mwisagent"
version = "0.1.0"
description = "Mountain Weather Information Service agent MVP"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Mehmet Rahmi Karatay" }
]
dependencies = [
    "pyproj>=3.7.1",
    "parsedatetime>=2.6",
    "beautifulsoup4>=4.12.3",
    "requests>=2.31.0",
    "pydantic>=2.0.0"
]

[dependency-groups]
dev = [
    "pytest>=7.0.0"
]
